# swarmfi-solana

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
docs/: SwarmFi_Colosseum_Submission.docx  bags-submission.md  buidl-submission.md
docs/demo/: demo-script.txt
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/api/bags/fees/: route.ts
frontend/src/app/api/bags/partner/: route.ts
frontend/src/app/api/bags/token/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/fees/: page.tsx
frontend/src/app/prediction-markets/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/token/: page.tsx
frontend/src/app/vaults/: page.tsx
frontend/src/components/: TransactionStatus.tsx  WalletConnectButton.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/lib/: anchor-setup.ts  arcium-encryption.ts  mock-data.ts  wallet.tsx
frontend/src/lib/bags/: client.ts  fee-sharing.ts  index.ts  partner.ts  token.ts  types.ts
migrations/: deploy.sh
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: errors.rs  lib.rs  state.rs
programs/prediction-market/src/instructions/: claim_winnings.rs  create_market.rs  initialize.rs  mod.rs  resolve_market.rs  submit_prediction.rs
programs/reputation-registry/: Cargo.toml
programs/reputation-registry/src/: errors.rs  lib.rs  state.rs
programs/reputation-registry/src/instructions/: get_reputation.rs  initialize.rs  mod.rs  update_reputation.rs
programs/swarm-oracle/: Cargo.toml  Xargo.toml
programs/swarm-oracle/src/: errors.rs  lib.rs  state.rs
programs/swarm-oracle/src/instructions/: consensus.rs  initialize.rs  mod.rs  register_agent.rs  slash_agent.rs  submit_encrypted_price.rs  submit_price.rs  update_agent_reputation.rs
programs/vault-manager/: Cargo.toml
programs/vault-manager/src/: errors.rs  lib.rs  state.rs
programs/vault-manager/src/instructions/: create_vault.rs  deposit.rs  initialize.rs  mod.rs  rebalance.rs  withdraw.rs
sdk/: tsconfig.json
sdk/src/: index.ts
tests/: swarmfi.test.ts
