[package]
name = "reputation-registry"
version = "1.0.0"
description = "SwarmFi — Agent Reputation Registry Program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
