[package]
name = "vault-manager"
version = "1.0.0"
description = "SwarmFi — Auto-rebalancing Vault Manager Program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
